<resources>
    <string name="app_name">EasySplitter</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="description">Description:\u0020</string>
    <string name="price">Price: $</string>
    <string name="groups">groups</string>
    <string name="transactions">transactions</string>
    <string name="decimalSymbol">%.2f</string>
    <string name="runtimeException">The Activity does not implement the GroupHandler interface</string>
    <string name="newGroup">New Group</string>
    <string name="add">Add</string>
    <string name="emptyFieldMsg">This field cannot be empty</string>
    <string name="runtimeException2">The Activity does not implement the UserHandler interface</string>
    <string name="newUser">New User</string>
    <string name="groupName">GROUP_NAME</string>
    <string name="noGroupMsg">Group does not exist</string>
    <string name="userCreated">User created</string>
    <string name="takenGroupId">Group ID already taken</string>
    <string name="createGroup">CREATE_GROUP</string>
    <string name="here">here</string>
    <string name="groupMembers">group members</string>
    <string name="required">Required</string>
    <string name="registerUser">RegisterUserDialog</string>
    <string name="registerGroup">RegisterGroupDialog</string>
    <string name="loadingMsg">Loading...</string>
    <string name="atSymbol">\@</string>
    <string name="newTransactionDialog">NewTransactionDialog</string>
    <string name="numMembers">Number of members in group:\u0020</string>
    <string name="totalExpense">Total expense: $</string>
    <string name="amountOwed">Amount each person needs to pay: $</string>
    <string name="emptyBody">StatementWithEmptyBody</string>
    <string name="aboutMsg">Users can add group expenses and EasySplitter will keep a running total of all expenses and how much each member of the group has to pay.</string>
    <string name="runtimeException3">The Activity does not implement the TransactionHandler interface</string>
    <string name="newTransaction">New Transaction</string>
    <string name="easysplitter">EasySplitter</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="group_id">Group ID</string>
    <string name="login">Login</string>
    <string name="register_user">Register User</string>
    <string name="register_group">Register Group</string>
    <string name="number_of_members_in_the_group">Number of members in the group</string>
    <string name="total_expenses">Total expenses:</string>
    <string name="amount_each_user_needs_to_pay">Amount each user needs to pay:</string>
    <string name="delete_all_expenses">Delete all expenses</string>
    <string name="expense_description">Expense Description</string>
    <string name="priceXML">Price</string>
    <string name="number_of_group_members">Number of group members</string>
    <string name="display_name">Display Name</string>
    <string name="buyer">Buyer</string>
    <string name="tvDescription">Description</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
</resources>
